--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/redux-persist": "^4.0.0",
     "clsx": "^2.1.1",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.515.0",
     "react": "^19.1.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.7.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "redux-persist": "^6.0.0",
