--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/redux-persist": "^4.0.0",
     "clsx": "^2.1.1",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.515.0",
     "react": "^19.1.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.7.2",
+    "react-intersection-observer": "^9.16.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-virtuoso": "^4.14.1",
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.1",
     "socket.io-client": "^4.8.1"
