--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/redux-persist": "^4.0.0",
+    "caniuse-lite": "^1.0.30001753",
     "clsx": "^2.1.1",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
