--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/redux-persist": "^4.0.0",
     "caniuse-lite": "^1.0.30001753",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.515.0",
     "react": "^19.1.1",
-    "react-custom-roulette": "^1.4.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.7.2",
