--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/matter-js": "^0.20.2",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/redux-persist": "^4.0.0",
     "caniuse-lite": "^1.0.30001753",
@@ -22,6 +23,7 @@
     "i18next-http-backend": "^3.0.2",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.515.0",
+    "matter-js": "^0.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
