попытка загрузить логотип в браузер

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,92 +1,26 @@
 {
-   "name": "ChiBox - Открывай кейсы CS2",
-   "short_name": "ChiBox",
-   "description": "Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы каждый день.",
-   "start_url": "/",
-   "display": "standalone",
-   "background_color": "#1a1a2e",
-   "theme_color": "#1a1a2e",
-   "orientation": "portrait-primary",
-   "lang": "ru-RU",
-   "dir": "ltr",
-   "icons": [
-     {
-       "src": "/android-chrome-192x192.png",
-       "sizes": "192x192",
-       "type": "image/png",
-       "purpose": "any maskable"
-     },
-     {
-       "src": "/android-chrome-512x512.png",
-       "sizes": "512x512",
-       "type": "image/png",
-       "purpose": "any maskable"
-     },
-     {
-       "src": "/icon-72x72.png",
-       "sizes": "72x72",
-       "type": "image/png"
-     },
-     {
-       "src": "/icon-96x96.png",
-       "sizes": "96x96",
-       "type": "image/png"
-     },
-     {
-       "src": "/icon-128x128.png",
-       "sizes": "128x128",
-       "type": "image/png"
-     },
-     {
-       "src": "/icon-144x144.png",
-       "sizes": "144x144",
-       "type": "image/png"
-     },
-     {
-       "src": "/icon-152x152.png",
-       "sizes": "152x152",
-       "type": "image/png"
-     },
-     {
-       "src": "/icon-384x384.png",
-       "sizes": "384x384",
-       "type": "image/png"
-     }
-   ],
-   "categories": ["games", "entertainment"],
-   "shortcuts": [
-     {
-       "name": "Открыть кейс",
-       "short_name": "Кейсы",
-       "description": "Открыть кейс CS2",
-       "url": "/",
-       "icons": [
-         {
-           "src": "/icon-96x96.png",
-           "sizes": "96x96"
-         }
-       ]
-     },
-     {
-       "name": "Профиль",
-       "short_name": "Профиль",
-       "description": "Мой профиль и инвентарь",
-       "url": "/profile",
-       "icons": [
-         {
-           "src": "/icon-96x96.png",
-           "sizes": "96x96"
-         }
-       ]
-     }
-   ],
-   "screenshots": [
-     {
-       "src": "/screenshots/home.jpg",
-       "sizes": "1280x720",
-       "type": "image/jpeg",
-       "form_factor": "wide"
-     }
-   ]
- }
- 
+  "name": "ChiBox - Открывай кейсы CS2",
+  "short_name": "ChiBox",
+  "description": "Открывай кейсы CS2, выигрывай скины и обменивай их! Бесплатные кейсы каждый день.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#1a1a2e",
+  "theme_color": "#1a1a2e",
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "/favicon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/favicon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "categories": ["games", "entertainment"],
+  "lang": "ru-RU"
+}
