--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,6 @@ VITE_BACKEND_URL=https://chibox-game.ru
 VITE_NODE_ENV=production
 VITE_SITE_URL=https://chibox-game.ru
 VITE_SITE_NAME=ChiBox
+
+# Яндекс.Метрика
+VITE_YANDEX_METRIKA_ID=105495748
